<resources>
    <string name="app_name">1 Consommation Dual Sim</string>
    <string name="add_widget">Valider</string>
    <string name="saturation">Saturation:</string>
    <string name="valeur">Valeur:</string>
    <string name="transparence">Transparence:</string>
    <string name="annuler">Annuler</string>
    <string name="ok">OK</string>
    <string name="sim_1">SIM 1:</string>
    <string name="nom_de_l_abonnement">Nom de l\'abonnement</string>
    <string name="sim1">SIM1</string>
    <string name="minutes">Minutes:</string>
    <string name="nb_de_minutes_de_l_abonnement">Nb de minutes de l\'abonnement</string>
    <string name="jour_de_d_but">Jour de début:</string>
    <string name="couleur">Couleur</string>
    <string name="sim_2">SIM 2:</string>
    <string name="sim2">SIM2</string>
    <string name="arrondi">Arrondi:</string>
    <string name="texte">Texte:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="pref_jauges_degradees">jauges_degradees</string>
    <string name="pref_inset_jauge_date">inset_jauge_date</string>
    <string name="pref_inset_jauge_consommation">inset_jauge_consommation</string>
    <string name="pref_inset_jauge">inset_jauge</string>
    <string name="pref_fond_noir">fond_noir</string>
    <string name="avance">Avancé</string>
    <string name="title_activity_configure">Conso Dual Sim Configuration</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="sim__1">SIM 1</string>
    <string name="sim__2">SIM 2</string>
    <string name="subscription_id">Subscription ID:</string>
</resources>
