<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_fond_noir"
        android:summaryOff="Blanc"
        android:summaryOn="Noir"
        android:switchTextOff="Blanc"
        android:switchTextOn="Noir"
        android:title="Fond:"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_jauges_degradees"
        android:title="Jauge degradée:"/>
    <EditTextPreference
        android:defaultValue="2"
        android:inputType="number"
        android:key="@string/pref_inset_jauge"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Inset jauge:"/>
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="2"
        android:inputType="number"
        android:key="@string/pref_inset_jauge_date"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Inset jauge date:"/>
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="2"
        android:inputType="number"
        android:key="@string/pref_inset_jauge_consommation"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Inset jauge consommation:"/>
</PreferenceScreen>